--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.8.0",
   "main": "is.js",
   "license": "MIT",
-  "description": "micro check library",
+  "description": "Micro check library for Node.js and the browser.",
   "repository": {
     "type": "git",
     "url": "https://github.com/finaldevstudio/fi-is.git"
@@ -11,13 +11,16 @@
   "bugs": {
     "url": "https://github.com/finaldevstudio/fi-is/issues"
   },
+  "scripts": {
+    "test": "./node_modules/mocha/bin/mocha --reporter list test/*.js"
+  },
   "homepage": "https://github.com/finaldevstudio/fi-is",
   "devDependencies": {
-    "chai": "^3.4.0",
-    "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "~0.11.3",
-    "grunt-contrib-uglify": "~0.9.2",
-    "grunt-mocha-phantomjs": "2.0.0",
-    "mocha": "^2.2.1"
+    "chai": "^3.5.0",
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.3",
+    "mocha": "^2.4.5"
   }
 }
