--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/finaldevstudio/fi-is/issues"
   },
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha --reporter list test/*.js"
+    "test": "./node_modules/karma/bin/karma start"
   },
   "homepage": "https://github.com/finaldevstudio/fi-is",
   "devDependencies": {
@@ -21,6 +21,11 @@
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.3",
+    "karma": "^0.13.22",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-mocha": "^0.2.2",
+    "karma-requirejs": "^0.2.6",
     "mocha": "^2.4.5"
   }
 }
