--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "gulp-uglify": "^1.5.3",
     "karma": "^0.13.22",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.2.3",
+    "karma-firefox-launcher": "^0.1.7",
     "karma-mocha": "^0.2.2",
-    "karma-requirejs": "^0.2.6",
     "mocha": "^2.4.5"
-  }
+  },
+  "dependencies": {}
 }
