--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "fi-is",
   "main": "dist/fi-is.js",
   "version": "0.8.0",
-  "homepage": "https://github.com/finaldevstudio/fi-is",
+  "homepage": "http://finaldevstudio.github.io/fi-is/",
   "authors": [
     "arasatasaygin <arasatasaygin@gmail.com>",
     "Santiago G. Marín <santiago@finaldevstudio.com>"
