--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "test": "node test/node & ./node_modules/karma/bin/karma start"
   },
-  "homepage": "https://github.com/finaldevstudio/fi-is",
+  "homepage": "http://finaldevstudio.github.io/fi-is/",
   "devDependencies": {
     "chai": "^3.5.0",
     "del": "^2.2.0",
