--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "http://finaldevstudio.github.io/fi-is/",
   "devDependencies": {
+    "browserify": "^13.0.0",
     "chai": "^3.5.0",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
@@ -25,7 +26,10 @@
     "karma-chai": "^0.1.0",
     "karma-firefox-launcher": "^0.1.7",
     "karma-mocha": "^0.2.2",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "vinyl-source-stream": "^1.1.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "vinyl-buffer": "^1.0.0"
+  }
 }
