--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/finaldevstudio/fi-is/issues"
   },
   "scripts": {
-    "test": "node test/node & ./node_modules/karma/bin/karma start"
+    "test": "node test/node && ./node_modules/karma/bin/karma start"
   },
   "homepage": "http://finaldevstudio.github.io/fi-is/",
   "devDependencies": {
@@ -27,9 +27,7 @@
     "karma-firefox-launcher": "^0.1.7",
     "karma-mocha": "^0.2.2",
     "mocha": "^2.4.5",
-    "vinyl-source-stream": "^1.1.0"
-  },
-  "dependencies": {
+    "vinyl-source-stream": "^1.1.0",
     "vinyl-buffer": "^1.0.0"
   }
 }
