--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.3",
+    "gulp-util": "^3.0.7",
+    "jsdox": "^0.4.9",
     "karma": "^0.13.22",
     "karma-chai": "^0.1.0",
     "karma-firefox-launcher": "^0.1.7",
     "karma-mocha": "^0.2.2",
     "mocha": "^2.4.5",
-    "vinyl-source-stream": "^1.1.0",
-    "vinyl-buffer": "^1.0.0"
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
