--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "test": "node test/node && ./node_modules/karma/bin/karma start"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babelify": "^10.0.0",
     "browserify": "^16.2.3",
     "chai": "^4.2.0",
     "del": "^4.1.1",
+    "doxdox": "^3.0.0",
     "gulp": "^4.0.2",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
-    "jsdox": "^0.4.9",
     "karma": "^4.1.0",
     "karma-chai": "^0.1.0",
     "karma-firefox-launcher": "^1.0.1",
