--- a/bower.json
+++ b/bower.json
@@ -7,8 +7,7 @@
   "description": "Small check library for Node.js and the browser",
   "license": "MIT",
   "authors": [
-    "Santiago G. Marín <santiago@finaldevstudio.com>",
-    "arasatasaygin <arasatasaygin@gmail.com>"
+    "Santiago G. Marín <santiago@finaldevstudio.com>"
   ],
   "moduleType": [
     "globals",
