--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "https://github.com/finaldevstudio/fi-is/issues"
   },
   "scripts": {
-    "test": "node test/node && ./node_modules/karma/bin/karma start"
+    "test": "nyc node test/node && ./node_modules/karma/bin/karma start"
   },
   "devDependencies": {
     "browserify": "^16.2.3",
@@ -30,6 +30,7 @@
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "mocha": "^6.1.4",
+    "nyc": "^14.1.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^2.0.0"
   }
