--- a/package.json
+++ b/package.json
@@ -15,22 +15,26 @@
   },
   "scripts": {
     "test": "nyc node test/node && ./node_modules/karma/bin/karma start",
-    "postinstall": "node postinstall.js"
+    "postinstall": "node postinstall.js",
+    "build": "gulp"
   },
   "devDependencies": {
-    "browserify": "^16.2.3",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babelify": "^10.0.0",
+    "browserify": "^16.5.0",
     "chai": "^4.2.0",
-    "del": "^4.1.1",
+    "del": "^5.0.0",
     "doxdox": "^3.0.0",
     "gulp": "^4.0.2",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
-    "karma": "^4.1.0",
+    "karma": "^4.2.0",
     "karma-chai": "^0.1.0",
-    "karma-firefox-launcher": "^1.0.1",
+    "karma-firefox-launcher": "^1.2.0",
     "karma-mocha": "^1.3.0",
-    "mocha": "^6.1.4",
+    "mocha": "^6.2.0",
     "nyc": "^14.1.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^2.0.0"
