--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "url": "https://github.com/finaldevstudio/fi-is/issues"
   },
   "scripts": {
-    "test": "nyc node test/node && ./node_modules/karma/bin/karma start",
+    "test": "npm run test:node && npm run test:browser",
     "postinstall": "node postinstall.js",
+    "test:node": "nyc node test/node",
+    "test:browser": "karma start",
     "build": "gulp"
   },
   "devDependencies": {
@@ -32,6 +34,7 @@
     "gulp-util": "^3.0.8",
     "karma": "^4.2.0",
     "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^1.2.0",
     "karma-mocha": "^1.3.0",
     "mocha": "^6.2.0",
