--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "chai": "^4.2.0",
     "del": "^5.0.0",
     "doxdox": "^3.0.0",
+    "eslint-plugin-mocha": "^6.2.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-security": "^1.4.0",
     "gulp": "^4.0.2",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.2",
