--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: node_js
 node_js:
   - '12'
+services:
+  - xvfb
 before_script:
   - export TZ=America/Denver
   - date
-  - 'export DISPLAY=:99.0'
-  - 'sh -e /etc/init.d/xvfb start'
   - sleep 3 # give xvfb some time to start
