--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-mocha": "^6.2.2",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-security": "^1.4.0",
+    "faker": "^4.1.0",
     "gulp": "^4.0.2",
     "gulp-rename": "^2.0.0",
     "gulp-uglify": "^3.0.2",
